--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/dcorry586/the-it-crowd-ui#readme",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.8.10",
     "axios": "^1.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.10"
   }
 }
