implemented changes from pr comment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
 	"compilerOptions": {
-	"outDir": "./dist",
-	"target": "es5",
-	"sourceMap": true,	
-	"noImplicitAny": true,	
+		"outDir": "./dist",
+		"target": "es5",
+		"sourceMap": true,
+		"noImplicitAny": true,
 	},
-	"include": ["./**/*"],
+	"include": [
+		"./**/*"
+	],
 	"exclude": [
-	"./node_modules/**/*",
-	"./dist/**/*"	
+		"./node_modules/**/*",
+		"./dist/**/*"
 	]
 }
