--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,6 +26,11 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a set of commands using the runners shell
-      - name: Run tests  
-        run: npm ci  
+      - name: Install packages  
+        run: npm ci      
+         
+      - name: Run unit-tests  
+        run: npm run test-unit
+
+
 
