--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "npx tsc && cp -R views dist && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-unit": "ts-mocha test/unit/**/*.ts",
+    "coverage-unit": "nyc npm run test-unit"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,19 @@
   "homepage": "https://github.com/dcorry586/the-it-crowd-ui#readme",
   "dependencies": {
     "axios": "^1.6.0",
+    "axios-mock-adapter": "^1.22.0",
+    "chai": "^4.3.10",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
+    "ts-mocha": "^10.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.8.10"
+    "@types/mocha": "^10.0.4",
+    "@types/node": "^20.8.10",
+    "nyc": "^15.1.0"
   }
 }
