--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/dcorry586/the-it-crowd-ui#readme",
   "dependencies": {
     "axios": "^1.6.0",
-    "axios-mock-adapter": "^1.22.0",
     "chai": "^4.3.10",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -33,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.4",
     "@types/node": "^20.8.10",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "axios-mock-adapter": "^1.22.0"
   }
 }
