--- a/.github/workflows/jmeter-Test.yml
+++ b/.github/workflows/jmeter-Test.yml
@@ -3,25 +3,21 @@ name: JMeter Test
 
 # Controls when the workflow will run
 on:
-# Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+#  Will run on 6pm every weekday
+  schedule:
+    - cron: "0 18 * * 1-5"
 
 # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-#The type of runner that the job will run on
+#runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout Performance
+      # Checks-out your repository under
+      - name: Checkout performanceTesting
         uses: actions/checkout@v3
 
       - name: PerfAction for JMeter
@@ -31,3 +27,5 @@ jobs:
         with:
         # jmeter test plan to execute
           test-plan-path: './The-IT-Crowd-PTest'
+
+
