--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "npx tsc && cp -R views dist && cp -R public dist && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-mocha test/unit/**/*.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint --fix . --ext .ts"
   },
@@ -23,14 +23,21 @@
     "axios": "^1.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.9",
+    "@types/mocha": "^10.0.4",
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "axios-mock-adapter": "^1.22.0",
+    "chai": "^4.3.10",
     "eslint": "^8.53.0",
-    "eslint-plugin-unused-imports": "^3.0.0"
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "mocha": "^10.2.0",
+    "ts-mocha": "^10.0.0"
   }
 }
