--- a/.github/workflows/jmeter-Test.yml
+++ b/.github/workflows/jmeter-Test.yml
@@ -3,16 +3,19 @@ name: JMeter Test
 
 # Controls when the workflow will run
 on:
-#  Will run on 6pm every weekday
+  #  Will run on 6pm every weekday
   schedule:
     - cron: "0 18 * * 1-5"
 
-# Allows you to run this workflow manually from the Actions tab
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   build:
-#runner that the job will run on
+    #runner that the job will run on
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +24,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: PerfAction for JMeter
-      # You may pin to the exact commit or the version.
-      # uses: QAInsights/PerfAction@f3959d0a69e7f23949add25d7e34a3ae167d6443
+        # You may pin to the exact commit or the version.
+        # uses: QAInsights/PerfAction@f3959d0a69e7f23949add25d7e34a3ae167d6443
         uses: QAInsights/PerfAction@v3.1
         with:
-        # jmeter test plan to execute
-          test-plan-path: './The-IT-Crowd-PTest'
-
-
+          # jmeter test plan to execute
+          test-plan-path: './The-IT-Crowd-PTest.jmx'
+      #      Uploads the ressuts of the Jmeter test
+      - name: Upload Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: jmeter-results
+          path: result.jtl
