--- a/.github/workflows/pa11y.yml
+++ b/.github/workflows/pa11y.yml
@@ -5,16 +5,22 @@ on:
   schedule:
     - cron: "0 18 * * 1-5"
 
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   pally-ci:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [14.x]
 
 #Checks out the code from the repository.
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
 #Sets up the Node.js environment.
       - name: use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -24,10 +30,7 @@ jobs:
 #Installs the dependencies required for running the tests.
       - name: install pa11y-ci dependencies
         run: npm install
-      - run: npm run build --if-present
-      - name: pa11y testing
-#Runs the test-pa11y script and prints the results.
-        env:
-          PA11Y_TEST: ${{ vars.Pa11y-ci }}
-        uses: npm run pa11y-ci
+#runs pa11y & prints results
+      - name: run pa11y-ci and print results
+        run: npm run test-pa11y
 
