--- a/.github/workflows/push-docker-container-aws.yml
+++ b/.github/workflows/push-docker-container-aws.yml
@@ -7,8 +7,8 @@ on:
   # Triggers the workflow on push to the "main" branch
   push:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+  
+    # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build & push the Docker image
         env:
-          BASE_URL: ${{ env.BASE_URL }}
+          BASE_URL: ${{ vars.BASE_URL }}
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: employee_demo
           IMAGE_TAG: the-it-crowd-ui
