[006] Add Responsibilities to ui

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "npx tsc && cp -R views dist && node dist/app.js",
-    "test-unit": "ts-mocha test/unit/**/*.ts",
+    "test": "ts-mocha test/unit/**/*.ts",
     "coverage-unit": "nyc npm run test-unit",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint --fix . --ext .ts"
   },
