--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "coverage-unit": "nyc npm run test-unit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint --fix . --ext .ts"
+    "lint-fix": "eslint --fix . --ext .ts",
+    "test-pa11y": "pa11y-ci"
   },
   "repository": {
     "type": "git",
@@ -29,18 +30,20 @@
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wait-on": "^7.2.0"
   },
   "devDependencies": {
-    "@types/expect": "^24.3.0",
-    "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.4",
-    "@types/node": "^20.8.10",
-    "nyc": "^15.1.0",
-    "axios-mock-adapter": "^1.22.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-unused-imports": "^3.0.0"
+    "@types/expect": "24.3.0",
+    "@types/express": "4.17.21",
+    "@types/mocha": "10.0.4",
+    "@types/node": "20.9.2",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
+    "axios-mock-adapter": "1.22.0",
+    "eslint": "8.54.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "nyc": "15.1.0",
+    "pa11y-ci": "3.1.0"
   }
 }
